feature: implemented set news